src/test/deca/context/valid/auto/valid/test58.deca
{
boolean x;
int d;
float x2 = (1315 + 2) * (-4879.101) - (30560 - 3) * (-893);
}
