src/test/deca/context/invalid/object/badNew3.deca
class Y
{

}
class X
{
  int a;
  boolean b = true;
}


class B
{
  X x = this;
  Y y = new Y();
  float a;

}
